--- a/templates/siteinfo.html
+++ b/templates/siteinfo.html
@@ -10,7 +10,7 @@
   <p><input type="password" name="password" id="password" value="{{ password }}" size="28" tabindex="4"></p>
   <p><label>Password (Confirm)</label></p>
   <p><input type="password" name="password-confirm" id="password-confirm" value="{{ password }}" size="28" tabindex="4"></p>
-  <p><label>Links - Using BBCode ([url] Tag) different links separated by new line.</label></p>
+  <p><label>Links - Usage: URL, TEXT [\n URL, TEXT \n ...] (\n represent for NEW LINE)</label></p>
   <p><textarea name="links" id="links" cols="60" rows="10" tabindex="4">{{ links }}</textarea></p>
   <p><input name="submit" id="submit" type="submit" tabindex="5" value="submit"></p>
 </form>
