--- a/templates/login.html
+++ b/templates/login.html
@@ -5,4 +5,5 @@
   <p><label>Password:</label></p>
   <p><input type="password" name="password" id="password" value="" size="28" tabindex="4"></p>
   <p><input name="submit" id="submit" type="submit" tabindex="4" value="Login"></p>
+  <input name="next" id="next" type="hidden" tabindex="4" value="{{ next }}">
 </form>
