--- a/templates/remove.html
+++ b/templates/remove.html
@@ -1,9 +1,14 @@
 <h2>Remove:</h2>
-<p> Are you sure to remove this blog '{{ entry['title'] }}'? </p>
+{% if type == 'entry' %}
+<p> Are you sure to remove this blog '{{ item['title'] }}'? </p>
+{% elif type == 'comment' %}
+<p> Are you sure to remove this comment: '{{ item['name'] }} says'? </p>
+{% end %}
 <form action="remove" method="post" id ="removeform">
   <p>
     <input name="submit" id="submit" type="submit" tabindex="4" value="OK">
-    <input name="id" id="id" type="hidden" value="{{ entry_id }}">
+    <input name="id" id="id" type="hidden" value="{{ id }}">
     <input name="next" id="next" type="hidden" value="{{ next }}">
+    <input name="type" id="type" type="hidden" value="{{ type }}">
   </p>
 </form>
