--- a/templates/compose.html
+++ b/templates/compose.html
@@ -10,7 +10,7 @@
     <label>or create a new</label><input type="text" id="category-new" name="category-new" value="" size="28" tabindex="4">
   </p>
   <p><label>Content - (BBCode is enabled)</label></p>
-  <p><textarea name="content" id="content" cols="60" rows="10" tabindex="4">{{ content }}</textarea></p>
+  <p><textarea name="entry-content" id="entry-content" cols="60" rows="10" tabindex="4">{{ content }}</textarea></p>
   <p>
     <input name="submit" id="submit" type="submit" tabindex="5" value="submit">
     <input type="hidden" name="post-id" value="{{ post_id }}" id="post-id">
