--- a/templates/background-links.html
+++ b/templates/background-links.html
@@ -1,4 +1,5 @@
 <li><a href='home'>Home</a></li>
 <li><a href='modify?q=compose'>Compose</a></li>
-<li><a href='siteinfo'>Site Infoormation</a></li>
+<li><a href='siteinfo'>Site Information</a></li>
+<li><a href='upload'>Upload</a></li>
 <li><a href='logout'>Logout</a></li>
