--- a/templates/compose.html
+++ b/templates/compose.html
@@ -17,6 +17,7 @@
       <input type="text" id="category-new" name="category-new" value="" size="28" tabindex="4">
     </p>
   </div>
+  <p><a href="upload" target="_blank">Upload a file</a></p>
   <p><label>Content</label></p>
   <div id="compose-container"><textarea name="entry-content" id="entry-content" cols="60" rows="10" tabindex="4">{{ content }}</textarea></div>
   <p>
